tests/derive/snapshots/tests__derive__cause__multiple_causes.snap
---
source: tests/derive/cause.rs
expression: "render(Parent { children: vec![Child {}.into(), Child {}.into()] })"
---
× error: parent error
      × error: child error

      × error: child error
