tests/derive/snapshots/tests__derive__cause__multiple_causes_with_source.snap
---
source: tests/derive/cause.rs
expression: "render(Parent\n{\n    children:\n    vec![Child { source: source.clone(), span: 13..17 }.into(), Child\n    { source: source.clone(), span: 24..30 }.into()]\n})"
---
× error: parent error
      × error: child error
         ╭─[some_file.lm:1:14]
       1 │ fn main() -> void {
         ∶              ^^^^ type not allowed
       2 │     return 0;
         ╰──

      × error: child error
         ╭─[some_file.lm:2:5]
       1 │ fn main() -> void {
       2 │     return 0;
         ∶     ^^^^^^ type not allowed
       3 │ }
         ╰──
