tests/derive/snapshots/tests__derive__cause__single_cause.snap
---
source: tests/derive/cause.rs
expression: "render(Parent { children: vec![Child {}.into()] })"
---
× error: parent error
      × error: child error
